--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
     "axios": "^0.26.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-native": "0.68.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^4.7.3",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.8",
@@ -35,7 +39,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./assets/fonts"]
+    "assets": [
+      "./assets/fonts"
+    ]
   }
-
 }
