--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-native": "0.68.0",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-safe-area-context": "^4.2.4",
